All or nothing question extension
Kiegészítve a az All or nothing question típus értelmezésével.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                         <input type="radio" name="percentcategory" id="strictmode" value="strict" checked="checked">
                         <label for="openmode" id="openmodelabel"></label>
                         <input type="radio" name="percentcategory" id="openmode" value="open">
+                        <label for="allornothingmode" id="allornothingmodelabel"></label>
+                        <input type="radio" name="percentcategory" id="allornothingmode" value="allornothing">
                     </div>
                 </div>
             </div>
